# easy-exchange

./: .env  README.md  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
EasyExchange/: asgi.py  settings.py  urls.py  wsgi.py
exchange/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
exchange/migrations/: 0001_initial.py  0002_remove_account_city.py  0003_alter_account_date_joined.py  0004_country_transaction.py  0005_transaction_pin.py  0006_remove_transaction_pin_account_pin.py  0007_alter_account_pin.py  0008_alter_account_pin.py  0009_alter_account_pin.py  0010_remove_transaction_amount_transaction_amount_in_and_more.py  0011_rename_amount_in_transaction_amount_received_and_more.py  0012_alter_transaction_options_alter_account_pin.py  0013_alter_transaction_options_alter_account_pin.py  0014_alter_account_pin.py
exchange/templatetags/: user_format.py
static/css/: style.css
static/js/: code_pin_toggle.js  display_message.js  general.js  signin.js  signup.js  transaction.js
templates/: base.html
templates/components/: sidebar.html
templates/exchange/: history.html  home.html  index.html  signin.html  signup.html  transaction.html
