[tool.poetry]
name = "easy-exchange"
version = "0.1.0"
description = ""
authors = ["ramzy05 <ramsesaguegang@gmail.com>"]
readme = "README.md"
packages = [{include = "easy_exchange"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.4"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
